--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dharan",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.0",
     "body-parser": "^1.19.0",
     "dot-env": "0.0.1",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "mongoose": "^5.9.15",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
+    "popups": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
