--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Dharan",
   "license": "ISC",
@@ -22,5 +22,11 @@
     "popups": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^4.43.0"
   }
 }
