--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "path": "^0.12.7",
     "popups": "^1.1.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
