--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "popups": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "socket.io": "^2.3.0",
     "web-push": "^3.4.4"
   },
   "devDependencies": {
