--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "homepage": "",
   "author": "Dharan",
@@ -12,6 +12,7 @@
   "dependencies": {
     "alert": "^5.0.0",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dot-env": "0.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
